add path for image carousel

--- a/css/carrousel.css
+++ b/css/carrousel.css
@@ -10,7 +10,7 @@
   height: calc(100% - 40px);
   position: relative;
   overflow: hidden;
-  background-image: url(/img/Culto7.jpg);  
+  background-image: url(https://fpineda-dev.github.io/appicm/img/Culto7.jpg);  
   background-size: 100% 100%; 
   background-repeat: no-repeat; 
   background-position: center center;
